# tidypy

./: .dockerignore  .gitignore  .travis.yml  CHANGES.rst  Dockerfile  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  appveyor.yml  covplug.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: docker.yml  installation_check.yml  test.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
src/tidypy/: __init__.py  cli.py  collector.py  config.py  core.py  finder.py  progress.py  util.py
src/tidypy/extenders/: __init__.py  base.py  bitbucket.py  bitbucket_snippet.py  filesys.py  github.py  github_gist.py  gitlab.py  gitlab_snippet.py  pastebin.py
src/tidypy/plugin/: git.py  mercurial.py  nose.py  pbbt.py  pytest.py  setuptools.py
src/tidypy/reports/: __init__.py  base.py  console.py  custom.py  null.py  prospector_json.py  pycodestyle.py  pylint.py  structured.py
src/tidypy/tools/: __init__.py  bandit.py  base.py  dlint.py  eradicate.py  jsonlint.py  lib2to3.py  manifest.py  mccabe.py  polint.py  pycodestyle.py  pydiatra.py  pydocstyle.py  pyflakes.py  pylint.py  pyroma.py  radon.py  rstlint.py  safety.py  secrets.py  vulture.py  yamllint.py
test/: test_cli.py  test_collector.py  test_config.py  test_core.py  test_extender_bitbucket.py  test_extender_bitbucket_snippet.py  test_extender_filesys.py  test_extender_github.py  test_extender_github_gist.py  test_extender_gitlab.py  test_extender_gitlab_snippet.py  test_extender_pastebin.py  test_finder.py  test_progress.py  test_report_console.py  test_report_custom.py  test_report_prospector.py  test_report_pycodestyle.py  test_report_pylint.py  test_report_structured.py  test_setuptools.py  test_util.py
test/project1/: Pipfile  input.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
test/project1/data/: broken.json  broken.po  broken.pot  broken.rst  broken.yaml  invalid.json  invalid.po  invalid.pot  invalid.yaml
test/project1/project1/: broken.py  koi8r.py  module1.py  module2.py  utf8.py
