[build-system]
requires = [
    'setuptools',
    'wheel',
]

[tool.tidypy]
exclude = [
    'test/.*',
    'build/.*',
    'dist/.*',
    'Pipfile',
]
vulture = {use = false}
pydocstyle = {use = false}
disabled = []
merge-issues = false

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
    'E731',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
    'trailing-newlines',
    'no-self-use',
    'duplicate-code',
]
[tool.tidypy.pylint.options]
min-public-methods = 0
max-args = 6
max-locals = 20

[tool.tidypy.pyflakes]
disabled = [
    'UnusedImport',
    'ImportStarUsed',
]

[tool.tidypy.yamllint]
disabled = [
    'empty-lines',
    'document-start',
]

[tool.tidypy.2to3]
disabled = [
    'future',
]

