[build-system]
requires = [
    'setuptools',
    'wheel',
]

[tool.tidypy]
exclude = [
    'docs/source/conf.py',
    'test/.*',
    'build/.*',
    'dist/.*',
    'Pipfile.lock',
    '.pytest_cache/.*',
]
vulture = {use = false}
disabled = []
merge-issues = false

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
    'E731',
]

[tool.tidypy.pydocstyle]
disabled = [
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D107',
    'D200', 'D202', 'D203', 'D205', 'D212',
    'D400', 'D401',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
    'trailing-newlines',
    'no-self-use',
    'duplicate-code',
    'useless-object-inheritance',
    'consider-using-dict-comprehension',
]
[tool.tidypy.pylint.options]
min-public-methods = 0
max-args = 6
max-locals = 20

[tool.tidypy.pyflakes]
disabled = [
    'UnusedImport',
    'ImportStarUsed',
]

[tool.tidypy.yamllint]
disabled = [
    'empty-lines',
    'document-start',
]

[tool.tidypy.2to3]
disabled = [
    'future',
]

[tool.tidypy.rstlint.options]
sphinx-extensions = [
    'sphinx.ext.autodoc',
]
ignore-roles = [
    'ref',
]

[tool.tidypy.secrets]
disabled = [
    'KeywordDetector',
]

